<resources>
    <string name="app_name">Spy</string>
    <string name="spy_game">SPY game</string>
    <string name="guess_the_spy">Guess the spy</string>
    <string name="start">Start</string>
    <string name="switches_theme">switches theme</string>
    <string name="rules">RULES</string>
    <string name="rules_text">There are 2 types of players - spies and regular players.
Non-spy players will be given the location, and the goal of the spies is to guess the location before the game ends.
The players\' objective is to determine who the spies are.

As the game starts, all players will ask questions each other one by one (only yes or no questions are allowed).
It starts with one player choosing another one to answer his question related to the secret location.
Then the one who was asked will be the next to choose and ask a question.
This cycle repeats until the end of a game.
At the end all players should start discussing whom to eliminate.

The player with most votes gets eliminated (if a player was a spy, players win. Otherwise spies\' win).</string>
    <string name="opens_rules">opens_rules</string>
    <string name="exits_rules_page">exits rules page</string>
    <string name="opens_github">opens github</string>
    <string name="save">Save</string>
    <string name="number_of_players">Number of players</string>
    <string name="number_of_spies">Number of spies</string>
    <string name="choose_locations">choose locations</string>
    <string name="startbutton">StartButton</string>
    <string name="icon">icon</string>
    <string name="settings">Settings</string>
    <string name="minus_button">Minus button</string>
    <string name="plus_button">Plus button</string>
    <string name="_5">5</string>
    <string name="time_in_mins">Time (in mins)</string>
    <string name="_1">1</string>
    <string name="role">See your role and pass on to the next player</string>
    <string name="yousp">You are SPY!</string>
    <string name="cancel">cancel</string>
    <string name="player_1">Player 1</string>
    <string name="loc">Location</string>
    <string name="tap_here">Tap here</string>
    <string name="refresh">refresh</string>
    <string name="opens_settings">opens settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="min">00:00</string>
    <string name="zeros">00:00</string>
    <string name="pause_timer">pause timer</string>
    <string name="started">The game has begun!</string>
    <string name="living_room">Living room</string>
    <string-array name="array">
        <item>A</item>
        <item>A</item>
        <item>A</item>
        <item>A</item>
        <item>A</item>
        <item>A</item>
    </string-array>
</resources>