<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsPage"
    style="@style/SCREEN">


    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="50dp"
                android:layout_height="70dp"
                android:layout_marginStart="40dp"
                android:layout_weight="1"
                app:srcCompat="@mipmap/settings_2_foreground" />

            <TextView
                android:id="@+id/textView2"
                style="@style/TEXT"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/inter_bold"
                android:gravity="center_vertical"
                android:letterSpacing="0.2"
                android:text="Settings"
                android:textAlignment="textStart"
                android:textSize="30sp"
                tools:ignore="RtlCompat" />
        </LinearLayout>

        <TextView
            style="@style/SETTINGS_TEXT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/number_of_players" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/minus_players"
                style="@style/SETTINGS_MINUS_BUTTON"
                android:contentDescription="Minus button"
                android:onClick="minusPlayers"/>

            <TextView
                android:id="@+id/players_number"
                style="@style/SETTINGS_NUMBER"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="5" />

            <ImageView
                android:id="@+id/plus_players"
                style="@style/SETTINGS_PLUS_BUTTON"
                android:onClick="plusPlayers"
                android:contentDescription="Plus button" />
        </LinearLayout>

        <TextView
            style="@style/SETTINGS_TEXT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/number_of_spies" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/minus_spies"
                style="@style/SETTINGS_MINUS_BUTTON"
                android:contentDescription="Minus button"
                android:onClick="minusSpies"/>

            <TextView
                android:id="@+id/spies_number"
                style="@style/SETTINGS_NUMBER"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="1" />

            <ImageView
                android:id="@+id/plus_spies"
                style="@style/SETTINGS_PLUS_BUTTON"
                android:contentDescription="Plus button"
                android:onClick="plusSpies"/>
        </LinearLayout>

        <TextView
            style="@style/SETTINGS_TEXT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Time (in mins)" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/minus_time"
                style="@style/SETTINGS_MINUS_BUTTON"
                android:contentDescription="Minus button"
                android:onClick="minusMinute"/>

            <TextView
                android:id="@+id/minutes"
                style="@style/SETTINGS_NUMBER"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="5" />

            <ImageView
                android:id="@+id/plus_time"
                style="@style/SETTINGS_PLUS_BUTTON"
                android:contentDescription="Plus button"
                android:onClick="plusMinute"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/location_layout"
        style="@style/BUTTON_BORDER"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/save_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
        android:onClick="openLocations">

        <TextView
            style="@style/TEXT"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/background"
            android:fontFamily="@font/inter_bold"
            android:gravity="center"
            android:letterSpacing="0.1"
            android:text="@string/choose_locations"
            android:textAlignment="center"
            android:textSize="14sp"
            tools:ignore="RtlCompat" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/save_layout"
        style="@style/BUTTON_BORDER"
        android:layout_width="250dp"
        android:layout_height="75dp"
        android:layout_marginBottom="50dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:onClick="exitSettings">

        <TextView
            style="@style/TEXT"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/background"
            android:fontFamily="@font/inter_bold"
            android:gravity="center"
            android:letterSpacing="0.1"
            android:text="@string/save"
            android:textAlignment="center"
            android:textSize="24sp"
            tools:ignore="RtlCompat" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>